syntax = "proto3";

package threat_protection.message.sample_request.v1;

option java_outer_classname = "SampleRequestProto";
option java_package = "threat_protection.message.sample_request.v1";

message SampleMaliciousRequest {
  string ip = 1;
  int64 timestamp = 2;
  string url = 3;
  string method = 4;
  int32 api_collection_id = 5;
  string payload = 6;
  string filter_id = 7;
}
